gocd-server-namespace.yaml
{
  "kind": "Namespace",
  "apiVersion": "v1",
  "metadata": {
    "name": "gocd",
    "labels": {
      "name": "gocd"
    }
  }
}
