gocd-server-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gocd-server-service
  namespace: gocd
  labels:
    app: gocd
spec:
  selector:
    app: gocd
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8153
  type: LoadBalancer
