gocd-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: gocd
  name: gocd-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: mygocdserver.info
    http:
      paths:
      - path: /
        backend:
          serviceName: gocd-server-service
          servicePort: 8080
